# vnode

./: .gitignore  README.md  example-node.json  pyproject.toml
.github/workflows/: release.yaml
examples/: README.md  autoresponder.py  basic_subscriptions.py  library_embed.py  listen_packets.py  mesh_interface_compat.py  meshtastic_compat.py  send_dm.py  serial_or_vnode.py  watch_reliability.py
tests/: test_crypto.py
vnode/: __init__.py  cli.py  config.py  runtime.py
vnode/tests/: test_crypto.py
vnode/vnode/: __init__.py  cli.py  config.py  crypto.py  example-node.json  runtime.py
