[project]
name = "vnode"
version = "0.1.8"
description = "Virtual Meshtastic node using mudp transport and meshdb storage."
authors = [
    {name = "Ben Lipsey",email = "ben@pdxlocations.com"}
]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.9,<3.15"
dependencies = [
  "cryptography>=43,<45",
  "meshdb>=0.1.9",
  "meshtastic>=2.7,<3.0",
  "mudp>=1.1.5",
]

[project.urls]
Homepage = "https://github.com/pdxlocations/vnode"
Issues = "https://github.com/pdxlocations/vnode/issues"

[project.scripts]
vnode = "vnode.cli:main"

[tool.poetry]
packages = [
  { include = "vnode", from = "vnode" },
]
include = [
  { path = "vnode/vnode/example-node.json", format = ["sdist", "wheel"] },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
